# ppocr-lite

./: METADATA  README.md  pyproject.toml
ppocr_lite/: detection.py  engine.py  models.py  structs.py
ppocr_lite_v6/: __init__.py  detection.py  recognition.py  text_handling.py  utils.py
